# AptWise-Backend

./: .env.example  GITHUB_OAUTH_COMPLETE.md  LINKEDIN_OAUTH_SETUP.md  README.md  alembic.ini  check_db.py  debug_405.py  pyproject.toml  test_env_vars.py  test_github_oauth.py  test_linkedin_oauth.py  test_linkedin_success.py  test_skill_integration.py
data/: python_questions.json  react_questions.json
documentation/: EVALUATION_ENHANCEMENT.md  GITHUB_OAUTH_SETUP.md  LINKEDIN_OAUTH_COMPLETE.md  SKILL_LEVEL_INTEGRATION.md  linkedin_scope_fix.py
migrations/versions/: 43222a225ba5_add_user_interviews_table.py  51ea273bcb45_add_linkedin_oauth_fields.py  5eda92bf16c7_create_user_skills_table.py  d84e51d727ea_create_user_table.py  e6fcb89449b6_add_github_oauth_fields.py  e75ab9cc238f_add_user_interview_dashboard_table.py  fd2f1a9e113e_add_user_evaluation_table.py
src/aptwise/: auth.py  main.py
src/aptwise/auth/: github_service.py  linkedin_service.py  linkedin_service_new.py  linkedin_service_old.py  models.py  routes.py  utils.py
src/aptwise/config/: __init__.py  db_config.py  github_config.py  linkedin_config.py
src/aptwise/database/: __init__.py  database_preset_functions.py  db_auth_services.py
src/aptwise/evaluation/: __init__.py  evaluation_service.py  models.py  routes.py
src/aptwise/interview/: __init__.py  ai_service.py  models.py  preset_ai_service.py  routes.py
src/aptwise/utils/: __init__.py  qdrant_service.py  updation_service.py
src/aptwise/vector_search/: __init__.py  routes.py
tests/: test_enhanced_evaluation.py
