[project]
name = "aptwise"
version = "0.1.0"
description = ""
authors = [
    {name = "Arya-Chakraborty",email = "aryastlawrence@gmail.com"},
    {name = "auhonab", email = "auhonabasu03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
]

[tool.poetry]
packages = [{include = "aptwise", from = "src"}]


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
